Update to Spring Boot 3 latest