@@ -1,6 +1,5 @@
 package com.in28minutes.springboot.learnspringboot;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -8,16 +7,16 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class CourseController {
-	
-	@RequestMapping("/courses")
-	public List<Course> retrieveAllCourses() {
-		return Arrays.asList(
-				new Course(1, "Learn AWS", "in28minutes"),
-				new Course(2, "Learn DevOps", "in28minutes"),
-				new Course(3, "Learn Azure", "in28minutes"),
-				new Course(4, "Learn GCP", "in28minutes")
-				
-				);
-	}
+
+    @RequestMapping("/courses")
+    public List<Course> retrieveAllCourses() {
+        return List.of(
+                new Course(1, "Learn AWS", "in28minutes"),
+                new Course(2, "Learn DevOps", "in28minutes"),
+                new Course(3, "Learn Azure", "in28minutes"),
+                new Course(4, "Learn GCP", "in28minutes")
+
+        );
+    }
 
 }
